# OCR-based-Grading-System

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py  schemas.py
app/api/: dashboard.py  dependencies.py  exams_routes.py  jobs_routes.py  messages_routes.py  roster.py  routes.py  submission_helpers.py  submissions_routes.py
app/core/: config.py  database.py
app/services/: academic.py  classes.py  comments.py  feedback_quality.py  gemini_client.py  grading.py  job_queue.py  jobs.py  json_utils.py  messaging.py  ocr.py  pdf_pages.py  policy.py  prompts.py
app/workers/: grading_worker.py  run_rq_worker.py
docs/: ARCHITECTURE.md
tests/: test_academic.py  test_api_integration.py  test_app_factory.py  test_comments.py  test_feedback_quality.py  test_gemini_client.py  test_pdf_pages.py  test_policy.py
