[project]
name = "ctd-ocr-grading-backend"
version = "0.1.0"
description = "FastAPI backend for page-wise OCR and personalized English written-answer grading."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "pymupdf>=1.24.5",
    "pypdfium2>=4.30.0",
    "Pillow>=10.4.0",
    "google-genai>=1.0.0",
    "tenacity>=8.3.0",
    "orjson>=3.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "storage*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]
